--- a/frontend/src/scss/custom.scss
+++ b/frontend/src/scss/custom.scss
@@ -2,9 +2,9 @@
 	$primary: #5a05ba,//#6f4bfd,//#4e08db,
 	$warning: #ff8633,
 	//$body-bg: transparent,//#e9ebec,
-	//$body-bg-dark: #151514,//#23272c,//#232223,//#393839,
+	$body-bg-dark: #121212,//#151514,//#23272c,//#232223,//#393839,
 	//$border-color: #d9dbdf,
-	//$border-color-dark: rgb(27, 27, 27),
+	$border-color-dark: #2e2e2e,//rgb(27, 27, 27),
 	$font-family-sans-serif: ("Nunito", sans-serif), 
 	
 );
