--- a/frontend/src/scss/custom.scss
+++ b/frontend/src/scss/custom.scss
@@ -1,10 +1,21 @@
 @use "../../node_modules/@coreui/coreui/scss/coreui" with (
-	$primary: #5a05ba,//#6f4bfd,//#4e08db,
+	$primary: #5a05ba,
+	//#6f4bfd,//#4e08db,
 	$warning: #ff8633,
-	//$body-bg: transparent,//#e9ebec,
-	$body-bg-dark: #121212,//#151514,//#23272c,//#232223,//#393839,
+	$light: #fefffe,
+	$body-bg: #f7f5fb,
+	//transparent,//#e9ebec,
+	$body-bg-dark: #121212,
+	//#151514,//#23272c,//#232223,//#393839,
 	//$border-color: #d9dbdf,
-	$border-color-dark: #2e2e2e,//rgb(27, 27, 27),
-	$font-family-sans-serif: ("Nunito", sans-serif), 
-	
+	$border-color-dark: #2e2e2e,
+	//rgb(27, 27, 27),
+	$font-family-sans-serif:
+		(
+			"Nunito",
+			sans-serif,
+		),
+	$font-size-base: 0.94rem,
+	$h5-font-size: 0.85rem,
+	$h6-font-size: 0.8rem,
 );
