--- a/frontend/src/scss/custom.scss
+++ b/frontend/src/scss/custom.scss
@@ -3,19 +3,16 @@
 	//#6f4bfd,//#4e08db,
 	$warning: #ff8633,
 	$light: #fefffe,
-	$body-bg: #f7f5fb,
-	//transparent,//#e9ebec,
-	$body-bg-dark: #121212,
-	//#151514,//#23272c,//#232223,//#393839,
+	$body-bg: #e7e9ff,
+	$body-bg-dark: #141414,
+	$card-cap-bg: transparent,
 	//$border-color: #d9dbdf,
 	$border-color-dark: #2e2e2e,
-	//rgb(27, 27, 27),
-	$font-family-sans-serif:
-		(
-			"Nunito",
-			sans-serif,
-		),
+	$font-family-sans-serif: (
+		"Nunito",
+		sans-serif,
+	),
 	$font-size-base: 0.94rem,
 	$h5-font-size: 0.85rem,
-	$h6-font-size: 0.8rem,
+	$h6-font-size: 0.8rem
 );
